# LocalPilot

./: .gitignore  .localpilot.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
crates/localpilot-cli/: Cargo.toml  build.rs
crates/localpilot-cli/src/: context_inject.rs  doctor.rs  eval_cmd.rs  handoff_cmd.rs  harness_cmd.rs  ingest_cmd.rs  key_input.rs  learning_cmd.rs  logging.rs  login_cmd.rs  main.rs  mcp.rs  memory_cmd.rs  models_cmd.rs  output.rs  outward_cmd.rs  propose_patch.rs  repl.rs  research.rs  rpc_cmd.rs  self_review_cmd.rs  session_cmd.rs  skill_discovery.rs  skills_cmd.rs  trust.rs  update.rs
crates/localpilot-cli/src/snapshots/: doctor__doctor__tests__render_is_stable.snap  doctor__doctor__tests__render_json_is_stable.snap  localpilot__doctor__tests__render_is_stable.snap  localpilot__doctor__tests__render_json_is_stable.snap
crates/localpilot-cli/tests/: ask.rs  cli_help.rs  doctor.rs  entrypoint_config_parity.rs  export.rs  feature.rs  ingest.rs  init.rs  inline_invariants.rs  key_input.rs  memory.rs  print.rs
crates/localpilot-cli/tests/snapshots/: doctor.snap
crates/localpilot-config/: Cargo.toml
crates/localpilot-config/src/: context.rs  credentials.rs  lib.rs  load.rs  redact.rs  schema.rs
crates/localpilot-config/tests/: config.rs
crates/localpilot-harness/: Cargo.toml
crates/localpilot-harness/src/: ablation.rs  brief.rs  claim.rs  discipline.rs  dispatch_gate.rs  evidence.rs  guidance.rs  handoff.rs  hooks.rs  judge.rs  launch_targets.rs  lessons.rs  lib.rs  planning.rs  precondition.rs  progress.rs  project_analysis.rs  project_instructions.rs  resume.rs  retrospective.rs  rules.rs  scorecard.rs  session.rs  summarizer.rs  system_prompt.rs  verify_target.rs  worker.rs
crates/localpilot-harness/src/quality/: mod.rs  ratify.rs  runner.rs
crates/localpilot-harness/src/snapshots/: localpilot_harness__guidance__tests__guidance_prompt_is_stable.snap  localpilot_harness__planning__tests__intake_prompt_is_stable.snap  localpilot_harness__planning__tests__planner_prompt_is_stable.snap
crates/localpilot-harness/tests/: ablation.rs  background.rs  broker.rs  budget.rs  check_before_launch.rs  claim_gate.rs  discipline.rs  evals.rs  first_party.rs  guidance_instrument.rs  hooks.rs  injection.rs  judge_live.rs  lifecycle.rs  memories_used.rs  model_switch.rs  pairing.rs  precondition.rs  prefill.rs  project_analysis.rs  project_instructions.rs  rails.rs  readable_errors.rs  repair.rs  resume.rs  session.rs  smart_compaction.rs  verify_gate.rs
crates/localpilot-harness/tests/corpus/clamp-bounds/: task.json
crates/localpilot-harness/tests/corpus/clamp-bounds/base/: solution.rs
crates/localpilot-harness/tests/corpus/clamp-bounds/gold/: solution.rs
crates/localpilot-harness/tests/corpus/classify-token/: task.json
crates/localpilot-harness/tests/corpus/classify-token/base/: solution.rs
crates/localpilot-harness/tests/corpus/classify-token/gold/: solution.rs
crates/localpilot-harness/tests/corpus/off-by-one-sum/: task.json
crates/localpilot-harness/tests/corpus/off-by-one-sum/base/: solution.rs
crates/localpilot-harness/tests/corpus/off-by-one-sum/gold/: solution.rs
crates/localpilot-harness/tests/corpus/parse-flag-case/: task.json
crates/localpilot-harness/tests/corpus/relative-path-strip/: task.json
crates/localpilot-localmind/: Cargo.toml
crates/localpilot-localmind/src/: active_skills_tool.rs  bundle.rs  chunk_store.rs  codegraph.rs  context_hook.rs  context_prefix.rs  error.rs  ingest.rs  inspector.rs  knowledge_tool.rs  layered.rs  layered_tool.rs  lib.rs  loop_lesson.rs  memory_search_tool.rs  ops.rs  pack.rs  primer.rs  remember_tool.rs  repair_signal.rs  research_chat.rs  research_ingest.rs  retrospective_lesson.rs  review_list_tool.rs  rule_cue.rs  seed.rs  skill_drafts_tool.rs  tool_use.rs  uplift_downweight.rs  workspace.rs
crates/localpilot-localmind/tests/: learning_loop_round_trip.rs
crates/localpilot-patchgen/: Cargo.toml
crates/localpilot-patchgen/src/: error.rs  gate.rs  git.rs  lib.rs  outward.rs  proposal.rs  provenance.rs
crates/localpilot-quota/: Cargo.toml
crates/localpilot-render/: Cargo.toml
crates/localpilot-render/src/: browser.rs  cdp.rs  lib.rs
crates/localpilot-render/tests/: render.rs
crates/localpilot-research/: Cargo.toml
crates/localpilot-research/src/: engine.rs  html.rs  lib.rs  output.rs  render.rs  report.rs  source.rs  synth.rs  web.rs
crates/localpilot-rpc/: Cargo.toml
crates/localpilot-rpc/src/: acp.rs  approver.rs  framing.rs  lib.rs  mcp.rs  serve.rs
crates/localpilot-rpc/tests/: mcp.rs
crates/localpilot-sandbox/: Cargo.toml
crates/localpilot-sandbox/src/: command.rs  lib.rs  path.rs  permission.rs
crates/localpilot-sandbox/tests/: boundary.rs
crates/localpilot-selfreview/: Cargo.toml
crates/localpilot-selfreview/src/: cleanup.rs  detectors.rs  finding.rs  friction.rs  lib.rs  outward.rs  process_friction.rs
crates/localpilot-skills/: Cargo.toml
crates/localpilot-skills/src/: catalog.rs  discovery.rs  error.rs  fetch.rs  install.rs  lib.rs  loader.rs  manager.rs  manifest.rs  source.rs  tools.rs
crates/localpilot-tui/: Cargo.toml
crates/localpilot-tui/src/: app.rs  lib.rs  render.rs  state.rs
crates/localpilot-tui/tests/: render.rs
crates/localpilot-tui/tests/snapshots/: render__approval_modal_snapshot.snap  render__approval_prompt_snapshot.snap  render__full_layout_snapshot.snap  render__live_region_snapshot.snap  render__streaming_live_region_snapshot.snap  render__streaming_turn_snapshot.snap  render__thinking_panel_on_does_not_occlude_the_footer.snap  render__trust_gate_snapshot.snap
crates/localpilot-verify/: Cargo.toml
crates/localpilot-verify/src/: lib.rs  observation.rs  postcondition.rs  verdict.rs  verifier.rs
crates/unshackled-cli/: Cargo.toml
crates/unshackled-cli/src/: harness_cmd.rs  main.rs  repl.rs  trust.rs
crates/unshackled-cli/tests/: export.rs  feature.rs
crates/unshackled-store/: Cargo.toml
crates/unshackled-store/src/: lib.rs
(+175 files in other folders)
