[package]
name = "localpilot"
version = "2.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["parking_lot"]

[[bin]]
name = "localpilot"
path = "src/main.rs"
# Collect the binary's module unit tests (e.g. the inline-driver scrollback-commit
# tests behind the `tui` feature). CI runs them via `cargo nextest run -p localpilot
# --features tui,learning --bin localpilot`; a default-feature run finds fewer of them.
test = true

[features]
# The interactive `chat` REPL links crossterm. It is opt-in so the default
# binary (doctor/ask/print/harness/memory/export) links no terminal backend and
# runs on every toolchain. Release and CI builds enable it.
default = []
tui = [
    "dep:crossterm",
    "dep:parking_lot",
    "dep:ratatui",
    "dep:localpilot-tui",
    "dep:ignore",
    "dep:arboard",
    "dep:base64",
    "dep:image",
]
# LocalMind is always linked; this feature remains as a compatibility alias for
# existing build commands.
learning = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
# Clipboard image capture for pasting images into the chat input (TUI only).
arboard = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
image = { workspace = true, optional = true }
clap.workspace = true
crossterm = { workspace = true, optional = true }
futures.workspace = true
indexmap.workspace = true
# Workspace file enumeration for the `@`-mention picker (TUI only).
ignore = { workspace = true, optional = true }
# Keep crossterm's parking_lot dependency on a Windows GNU/MSRV-compatible patch:
# parking_lot_core 0.9.12 crashes before main on rustc 1.82 x86_64-pc-windows-gnu.
parking_lot = { workspace = true, optional = true }
# Do NOT enable ratatui's `scrolling-regions` feature here. It makes
# Terminal::insert_before commit history via DECSTBM margin scrolls
# (`ESC[t;br` + `ESC[nS`) instead of newline-at-bottom. Windows Terminal does
# not preserve lines scrolled out of a margin region into its scrollback
# buffer, so conversation history above the live region is silently discarded
# (the "scroll up, start of conversation missing" bug). The default
# (no-scrolling-regions) path uses `append_lines` (`\n` at the bottom row),
# which feeds scrollback reliably on every terminal, Windows Terminal included.
ratatui = { workspace = true, features = [
    "crossterm",
], optional = true }
reqwest.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
localpilot-config = { path = "../localpilot-config" }
localpilot-core = { path = "../localpilot-core" }
localpilot-harness = { path = "../localpilot-harness" }
localpilot-llm = { path = "../localpilot-llm" }
localpilot-localmind = { path = "../localpilot-localmind" }
localpilot-mcp = { path = "../localpilot-mcp" }
localpilot-patchgen = { path = "../localpilot-patchgen" }
localpilot-quota = { path = "../localpilot-quota" }
localpilot-recovery = { path = "../localpilot-recovery" }
localpilot-research = { path = "../localpilot-research" }
localpilot-rpc = { path = "../localpilot-rpc" }
localpilot-sandbox = { path = "../localpilot-sandbox" }
localpilot-selfreview = { path = "../localpilot-selfreview" }
localpilot-skills = { path = "../localpilot-skills" }
localpilot-store = { path = "../localpilot-store" }
localpilot-tools = { path = "../localpilot-tools" }
localpilot-tui = { path = "../localpilot-tui", optional = true }

[dev-dependencies]
assert_cmd = { workspace = true }
crossterm = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
