[package]
name = "localpilot-config"
version = "2.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Build the OS-keychain credential backend (keyring). Off by default so the
# normal build/test gate links no native credential-store deps and stays green
# headless; release builds and the interactive binary enable it. Without it the
# store uses the restrictive-mode fallback file and resolution falls through to
# the environment, so credentials still work — only the secret backend differs.
keychain = ["dep:keyring"]

[dependencies]
figment = { workspace = true }
ignore = { workspace = true }
indexmap = { workspace = true }
keyring = { workspace = true, optional = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
localpilot-core = { path = "../localpilot-core" }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
