[package]
name = "localpilot-localmind"
version = "2.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
ignore = { workspace = true }
localmind-codegraph = { path = "../../external/localmind/crates/localmind-codegraph" }
localmind-core = { path = "../../external/localmind/crates/localmind-core" }
localmind-inference = { path = "../../external/localmind/crates/localmind-inference" }
localmind-mcp = { path = "../../external/localmind/crates/localmind-mcp" }
localmind-store = { path = "../../external/localmind/crates/localmind-store" }
schemars = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
localpilot-config = { path = "../localpilot-config" }
localpilot-core = { path = "../localpilot-core" }
localpilot-harness = { path = "../localpilot-harness" }
localpilot-sandbox = { path = "../localpilot-sandbox" }
localpilot-store = { path = "../localpilot-store" }
localpilot-tools = { path = "../localpilot-tools" }
rusqlite = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
