[package]
name = "localpilot-patchgen"
version = "2.1.4"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
localpilot-config = { path = "../localpilot-config" }

[dev-dependencies]
tempfile = { workspace = true }
