[package]
name = "localpilot-render"
version = "2.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
localpilot-research = { path = "../localpilot-research" }
serde_json = { workspace = true }
# Ephemeral, throwaway browser profile directory (removed on drop) so no cookies
# or auth state survive a render.
tempfile = { workspace = true }
thiserror = { workspace = true }
# `net` (additive over the workspace features) is required by the CDP WebSocket
# transport; `process` launches the headless browser.
tokio = { workspace = true, features = ["net"] }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
wiremock = { workspace = true }
