[package]
name = "localpilot-sandbox"
version = "1.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
dunce = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
