[package]
name = "localpilot-tui"
version = "0.3.0-beta.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# The testable UI crate renders with ratatui's backend-agnostic widgets and a
# TestBackend; the real terminal backend (crossterm) and the hand-rolled composer
# live in the CLI's terminal driver, keeping this crate's tests free of the
# terminal-init code that crashes the harness on some local toolchains.
ratatui = { workspace = true, default-features = false }
# Slash-command and @-mention autocomplete popup lists (builder-driven,
# backend-agnostic). Finished output now flows into native scrollback, so the
# full-screen scrollable transcript view is gone.
tui-widget-list = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
