[package]
name = "localpilot-verify"
version = "2.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
localpilot-core = { path = "../localpilot-core" }
localpilot-sandbox = { path = "../localpilot-sandbox" }
localpilot-tools = { path = "../localpilot-tools" }

[dev-dependencies]
tempfile = { workspace = true }
