[package]
name = "unshackled-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
unshackled-config = { path = "../unshackled-config" }
unshackled-core = { path = "../unshackled-core" }

[dev-dependencies]
tempfile = { workspace = true }
